# subgine

./: .gitignore  CMakeLists.txt  README.md  deploy-dev.sh  physic.hpp  system.hpp
Collision/: circle.cpp  circle.h  collisionnable.cpp  collisionnable.h  line.cpp  line.h  point.cpp  point.h  point_able.h  polygon.cpp  polygon.h  sat_able.cpp  sat_able.h
Collision/CollisionHandlers/: collisionhandler.cpp  collisionhandler.h
Collision/CollisionResults/: collisionresult.cpp  collisionresult.h  satresult.cpp  satresult.h
Collision/CollisionTesters/: collisiontester.cpp  collisiontester.h  pointtester.cpp  pointtester.h  sattester.cpp  sattester.h
Collision/Engines/: collision.cpp  collision.h
Particle/: particle.cpp  particle.h
Particle/Engines/: particle.cpp
Physic/: abstractphysicpoint.cpp  abstractphysicpoint.h  physicpoint.cpp  physicpoint.h  physicpoint3.cpp  physicpoint3.h
Physic/CollisionHandlers/: bounce.cpp  bounce.h
Physic/Engines/: physics.cpp  physics.h
Physic/Rules/: attraction.cpp  attraction.h  gravity.cpp  gravity.h  resistance.cpp  resistance.h  rule.cpp  rule.h  spring.cpp  spring.h
Physic/Rules3/: attraction.cpp  attraction.h  gravity.cpp  gravity.h  resistance.cpp  resistance.h  rule.cpp  rule.h  spring.cpp  spring.h
System/: const.h  container.cpp  container.h  engine.cpp  engine.h  factory.cpp  factory.h  mainengine.cpp  mainengine.h  positionnable.cpp  positionnable.h  positionnable3.cpp  positionnable3.h  utilities.cpp  utilities.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
System/Traits/: angle.cpp  angle.h  position.cpp  position.h  position3.h  vertex.cpp  vertex.h
cmake_modules/: FindBoost.cmake  FindSFML.cmake
src/: collision.hpp  particle.hpp  physic.hpp  system.hpp
src/Collision/: aabb_able.cpp  aabb_able.h  aabbbox.cpp  aabbbox.h  circle.cpp  circle.h  collisionbody.cpp  collisionbody.h  collisionentity.cpp  collisionentity.h  collisionnable.cpp  collisionnable.h  compoundcollision.cpp  compoundcollision.h  line.cpp  line.h  point.cpp  point.h  point_able.cpp  point_able.h  polygon.cpp  polygon.h  quadtree.cpp  quadtree.h  sat_able.cpp  sat_able.h  satresultaccumulator.cpp  satresultaccumulator.h
src/Collision/CollisionHandlers/: collisionhandler.cpp  collisionhandler.h
src/Collision/CollisionResults/: collisionresult.cpp  collisionresult.h  resultdata.cpp  resultdata.h  satresult.cpp  satresult.h
src/Collision/CollisionTester/: collisiontester.cpp  collisiontester.h  compoundtester.cpp  compoundtester.h  quadtreetester.cpp  quadtreetester.h  satquadtreetester.cpp  satquadtreetester.h  sattester.cpp  sattester.h
src/Collision/CollisionTesters/: collisiontester.cpp  collisiontester.h  pointtester.cpp  pointtester.h  sattester.cpp  sattester.h
src/Collision/Engines/: collision.cpp  collision.h  group.h  (+6 more)
src/Particle/: particle.cpp  particle.h
src/Physic/: abstractphysicpoint.cpp  abstractphysicpoint.h  physicbody.cpp  physicbody.h  physicbodycomponentprovider.cpp  physicbodycomponentprovider.h  physicbodydisplaycomponentprovider.cpp  physicbodydisplaycomponentprovider.h  physicengine.cpp  physicengine.h  physicpoint.cpp  physicpoint.h  physicpoint3.cpp  physicpoint3.h  physicpointcomponentprovider.cpp  physicpointcomponentprovider.h  physicpointdisplaycomponentprovider.cpp  physicpointdisplaycomponentprovider.h  pulseaccumulator.cpp  pulseaccumulator.h
src/System/: accumulator.cpp  accumulator.h  avgaccumulator.cpp  avgaccumulator.h  callbackcomponentprovider.cpp  callbackcomponentprovider.h  callbackdisplaycomponentprovider.cpp  callbackdisplaycomponentprovider.h  clonable.cpp  clonable.h  clone.h  componentprovider.h  const.h  container.h  displaycomponentprovider.cpp  displaycomponentprovider.h  engine.cpp  engine.h  entity.cpp  entity.h  mainengine.cpp  mainengine.h  material.cpp  material.h  memory.h  parallel_for.cpp  parallel_for.h  positionnable.cpp  positionnable.h  positionnable3.cpp  positionnable3.h  sumaccumulator.cpp  sumaccumulator.h  time.cpp  time.h  type_id.h  type_traits.h  utility.h  vector-all.h  vector.cpp  (+11 more)
(+83 files in other folders)
